# rust-pg-ops

./: .gitignore  README.md
postgres_manager/: Cargo.toml  README.md
postgres_manager/src/: backup.rs  lib.rs  main.rs  postgres.rs  tui.rs
postgres_manager/src/ui/: browser.rs  downloader.rs  models.rs  renderer.rs
postgres_manager/tests/: browser_tests.rs  renderer_tests.rs
postgres_manager/tests/snapshots/: browser_tests__backup_metadata.snap  browser_tests__backup_metadata.snap.new  browser_tests__popup_state_confirm_cancel.snap  browser_tests__popup_state_confirm_cancel.snap.new  browser_tests__popup_state_confirm_restore.snap  browser_tests__popup_state_confirm_restore.snap.new  browser_tests__popup_state_downloading.snap  browser_tests__popup_state_downloading.snap.new
