[package]
name = "postgres_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
log4rs = "1.2"
tempfile = "3.10.1"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = "0.26.0"
crossterm = "0.27.0"
aws-config = "1.1.0"
aws-sdk-s3 = "1.12.0"
tokio-stream = "0.1.14"
